--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,15 @@ body{
     background-color: var(--White);
     max-width: 280px;
     max-height: 100vh;
-    gap: 0.5rem;
+    gap: 0.3rem;
 }
 .content__img{
     display: flex;
     width: 100%;
-    margin-bottom: 1rem;
+    /*margin-bottom: 1rem;*/
 }
 .content__title{
+    margin-top: 1rem;
     font-size: calc(1.1rem + 1vw);
     color: var(--DarkSlateGrey);
     font-weight: 700;
@@ -55,10 +56,9 @@ p{
 .text_email{
     color: var(--DarkSlateGrey);
     font-weight: 700;
-    margin-top: 1.5rem; 
+    padding: 0.5rem 0;
 }
 #input_email{
-    margin: 0.5rem 0 ;
     width: 100%;
     font-size: s0.7rem;
     padding: 0.5rem 1rem;
@@ -66,10 +66,11 @@ p{
     border-radius: 0.2rem;
 }
 .button{
-    padding: 0.8rem 1rem;
+    padding: 0.8rem ;
     border:none;
     border-radius: 0.3rem;
-    margin: 0 1rem 1rem 1rem;
+    margin: 0.5rem 0 ;
+    width: 100%;
     font-size: 0.7rem;
     color:var(--White);
     background-color: var(--DarkSlateGrey);
