--- a/styles.css
+++ b/styles.css
@@ -74,4 +74,32 @@ p{
     font-size: 0.7rem;
     color:var(--White);
     background-color: var(--DarkSlateGrey);
+    
+}
+
+@media (width > 700px)
+{
+    .agradecimiento{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        background-color: var(--White);
+        height: 100vh;
+        width: 280px;
+    }
+    
+    .agradecimiento__icon{
+        width: 10vw;
+        height: 10vh;
+    }
+    
+    .agradecimiento__button{
+        width: 100%;
+    }
+    .agradecimiento__container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
